@@ -1,3 +1,12 @@
+2011-06-09  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by Tony Chang.
+
+        nrwt: support webaudio in chromium driver
+        https://bugs.webkit.org/show_bug.cgi?id=62226
+
+        * Scripts/webkitpy/layout_tests/port/chromium.py:
+
 2011-06-09  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Anders Carlsson.
